--- a/Build.props
+++ b/Build.props
@@ -1,9 +1,13 @@
 <Project>
     <PropertyGroup>
-        <!-- IMPORTANT: Should point to <Barotrauma_Install>\LocalMods\<MyModName>\ -->
-        <!-- IMPORTANT: ModDeplyDir Path must end with '\' -->
-        <ModDeployDir>/home/fatigue/.local/share/Steam/steamapps/common/Barotrauma/LocalMods/cross_class/</ModDeployDir>
-        <!-- IMPORTANT: Avoid the use of special (IE: / : ; , \ < > ?) (periods "." are good) and non-english characters in the AssemblyName.-->
+        <ModDeployDir>
+            /home/fatigue/.local/share/Steam/steamapps/common/Barotrauma/LocalMods/cross_class/</ModDeployDir>
         <AssemblyName>CrossClass</AssemblyName>
+    </PropertyGroup>
+
+    <PropertyGroup>
+        <RootNamespace>$(SolutionName.Replace(" ", "_"))</RootNamespace>
+        <PlatformTarget>x64</PlatformTarget>
+        <GenerateDocumentationFile>False</GenerateDocumentationFile>
     </PropertyGroup>
 </Project>
