--- a/ClientProject/OSXClient.csproj
+++ b/ClientProject/OSXClient.csproj
@@ -40,6 +40,7 @@
       <Reference Include="XNATypes">
         <HintPath>..\Refs\XNATypes.dll</HintPath>
       </Reference>
+      <!-- <PackageReference Include="Newtonsoft.Json" Version="13.0.3" PrivateAssets="all" /> -->
     </ItemGroup>
 
   <Import Project="..\SharedProject\SharedProject.projitems" Label="Shared" />
@@ -64,6 +65,7 @@
       <Assemblies Include="$(TargetDir)$(TargetName).dll" />
       <DepsFiles Include="$(TargetDir)$(TargetName).deps.json" />
     </ItemGroup>
+    <!-- <Copy SourceFiles="..\Refs\Newtonsoft.Json.dll" DestinationFiles="$(ModDeployDir)bin\Client\OSX\Newtonsoft.Json.dll" /> -->
     <Copy SourceFiles="@(Assemblies)" DestinationFiles="$(ModDeployDir)bin\Client\OSX\$(TargetName).dll" />
     <Copy SourceFiles="@(DepsFiles)" DestinationFiles="$(ModDeployDir)bin\Client\OSX\$(TargetName).deps.json" />
   </Target>
